# K50SoundBoostPlus

./: .gitignore  .gitmodules  README.md  module.prop  update.json
.github/workflows/: build.yml
Core/: CMakeLists.txt  LICENSE  README.md
Core/.github/workflows/: ci.yml  deploy-docs.yml  release.yml
Core/docs/: README.md  index.md  package.json
Core/docs/.vitepress/: config.ts
Core/docs/api/: cli-tools.md  filewatcher-api.md  index.md  logger-api.md
Core/docs/guide/: building.md  development-api.md  getting-started.md  introduction.md  performance.md  system-tools.md
Core/docs/zh/: index.md
Core/docs/zh/api/: cli-tools.md  filewatcher-api.md  index.md  logger-api.md
Core/docs/zh/guide/: building.md  development-api.md  getting-started.md  system-tools.md
Core/examples/: api_example.cpp  performance_test.sh  usage_example.sh
Core/src/filewatcher/: filewatcher.cpp  watcher_core.cpp
Core/src/filewatcherAPI/: CMakeLists.txt  filewatcher_api.hpp
Core/src/logger/: CMakeLists.txt  Logsystem.sh  buffer_manager.cpp  buffer_manager.h  buffer_manager.hpp  file_manager.cpp  file_manager.h  file_manager.hpp  ipc_client.cpp  ipc_client.h  ipc_client.hpp  logger_client.cpp  logger_daemon.cpp
Core/src/loggerAPI/: CMakeLists.txt  logger_api.hpp
Core/tests/: CMakeLists.txt  test_filewatcher_api.cpp  test_logger_api.cpp
Dolby_Version/MIUI/: dax-default.xml
module/: README.md  settings.json  system.prop
module/system/etc/: mixer_paths.xml  mixer_paths_cdp.xml
module_settings/: config.sh  settings.json
webroot/: index.html
webroot/assets/css/: main-DqzktWDV.css
webroot/assets/js/: about-fJmkQe8m.js  core-CSZe8cb_.js  en-CaqxGi7W.js  logs-Cbjsngkf.js  main-CQLp2XMv.js  ru-BRIjaAIj.js  settings-Bm1SVIU6.js  status-BUKxly5E.js  zh-DrTjvQI5.js
webui/: README.md  build.sh  config.mmrl.json  index.html  package.json
webui/.github/workflows/: ci.yml  deploy.yml
webui/docs/: README.md  mmrl-webui-x.md
webui/examples/: mmrl-webui-x-api-demo.js  new-api-features-demo.js
webui/src/: app.js  core.js  main.js
webui/src/assets/css/: base.css  mmrl-compat.css
webui/src/i18n/: en.json  ru.json  zh.json
webui/src/modules/: core.js  dialog-manager.js  i18n.js  plugin-manager.js
webui/src/pages/: home.js  logs.js  settings.js
webui_overlay/: example_settings.json
webui_overlay/src/: pages.json
webui_overlay/src/assets/css/pages/: dax-equalizer.css  daxequalizer.css
webui_overlay/src/i18n/modules/: en.json  zh.json
webui_overlay/src/modules/: plugin-manager.js
webui_overlay/src/pages/: daxequalizer.js
webui_overlay/src/plugins/: .gitkeep
